--- a/NumEx_Version-06.ipynb
+++ b/NumEx_Version-06.ipynb
@@ -5,7 +5,7 @@
    "id": "5e4c82d9",
    "metadata": {},
    "source": [
-    "#  Quasi-spherical Szekeres models and Generalized Relativistic Zeldovich Approximation\n",
+    "#  Quasi-spherical Szekeres models and Generalized Relativistic Zel'dovich Approximation\n",
     "\n",
     "**Created by: Ismael Delgado Gaspar**\n",
     "\n",
