--- a/NumEx_Version-06.ipynb
+++ b/NumEx_Version-06.ipynb
@@ -5,7 +5,7 @@
    "id": "5e4c82d9",
    "metadata": {},
    "source": [
-    "#  Quasi-spherical Szekeres models and Generalized Relativistic Zel'dovich Approximation\n",
+    "#  Quasi-spherical Szekeres models and Generalized Relativistic Zeldovich Approximation\n",
     "\n",
     "**Created by: Ismael Delgado Gaspar**\n",
     "\n",
@@ -27,7 +27,9 @@
     "\n",
     "- **Section 2: GW parametrization.** The seed model is rewritten in the GW language.\n",
     "\n",
-    "- **Section 3: GRZA solutions.** We use the functions of the rescaled Szekeres model and perturb the initial data. The new solution can be interpreted as a generalization of the quasi-spherical Szekeres models, where the surfaces of $t,r=\\hbox{const.}$ are 2-spheres but arranged in a more general way than in Szekeres.\n"
+    "- **Section 3: GRZA solutions.** We use the functions of the rescaled Szekeres model and perturb the initial data. The new solution can be interpreted as a generalization of the quasi-spherical Szekeres models, where the surfaces of $t,r=\\hbox{const.}$ are 2-spheres but arranged in a more general way than in Szekeres.\n",
+    "\n",
+    "- **Section 4: Estimation of the error via the Ham. constraint.** We exploit the relationship between the present models and the exact solutions to work out a closed-form expression for $\\mathbb{H}:= \\left(G_{\\mu\\nu}-8\\pi T_{\\mu\\nu}\\right) u^\\mu u^\\nu=  G_{00}-8\\pi T_{00}$. Here, we evaluate the final expression.\n"
    ]
   },
   {
