--- a/NumEx_Version-06.ipynb
+++ b/NumEx_Version-06.ipynb
@@ -5,11 +5,11 @@
    "id": "5e4c82d9",
    "metadata": {},
    "source": [
-    "#  Quasi-spherical Szekeres models and Generalized Relativistic Zeldovich Approximation\n",
+    "#  Quasi-spherical Szekeres models and Generalized Relativistic Zel'dovich Approximation\n",
     "\n",
     "**Created by: Ismael Delgado Gaspar**\n",
     "\n",
-    "**Last update:** August 30, 2022"
+    "**Last update:** October 2, 2022"
    ]
   },
   {
@@ -1487,7 +1487,7 @@
    "id": "86cb2314",
    "metadata": {},
    "source": [
-    "## Solving EEs in a convonient form"
+    "## Solving EEs in a convinient way"
    ]
   },
   {
