--- a/NumEx_Version-06.ipynb
+++ b/NumEx_Version-06.ipynb
@@ -8,7 +8,8 @@
     "#  Quasi-spherical Szekeres models and Generalized Relativistic Zel'dovich Approximation\n",
     "\n",
     "**Created by: Ismael Delgado Gaspar**\n",
-    "This research was funded by National Science Centre (NCN, Poland) under the Sonata-15 research grant UMO-2019/35/D/ST9/00342\n",
+    "\n",
+    "**This research was funded by National Science Centre (NCN, Poland) under the Sonata-15 research grant UMO-2019/35/D/ST9/00342**\n",
     "\n",
     "**Last update:** October 2, 2022"
    ]
